EDU-244 Add homepage info

--- a/src/components/pages/settings.less
+++ b/src/components/pages/settings.less
@@ -20,3 +20,15 @@
 .SettingsPage-createDocumentRegenerationBatchButton {
   background: @red-5;
 }
+
+.SettingsPage-homepageInfo {
+  display: grid;
+  gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.SettingsPage-homepageInfoPreview {
+  border: 1px solid @grey-5;
+  padding: 4px 11px;
+  min-height: 100px;
+}
