NOTICKET: Styling improvement on home page

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -1,5 +1,7 @@
 .IndexPage {
   .m-fullscreen;
+  padding-top: 20vh;
+  padding-bottom: 30vh;
 }
 
 .IndexPage-title {
@@ -9,16 +11,16 @@
 
 .IndexPage-search {
   .m-content;
-  margin-bottom: 32px;
   display: flex;
+  margin-bottom: 32px;
 }
 
 .IndexPage-searchInput {
-  flex: 1 1 100%
+  flex: 1 1 100%;
 }
 
 .IndexPage-searchButton {
-  flex: auto
+  flex: auto;
 }
 
 .IndexPage-homepageInfo {
