EDU-266 Execute search after loading search page

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -1,17 +1,24 @@
-.Search-searchSelectContainer {
-  width: 50%; 
+.SearchPage {}
+
+.SearchPage-searchHeader {
+  margin: 25px 0;
+  max-width: 600px;
+}
+
+.SearchPage-searchSelectContainer {
+  width: 50%;
   margin: 0 0 0 auto;
 }
 
-.Search-placeholderContainer {
+.SearchPage-placeholderContainer {
   display: flex;
   justify-content: space-between;
 }
 
-.Search-placeholderContainerIcon {
+.SearchPage-placeholderContainerIcon {
     align-self: center
 }
 
-.Search-searchTableLanguageColumn {
+.SearchPage-searchTableLanguageColumn {
   min-width: 150px;
 }
