--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -64,6 +64,7 @@
 @import '../components/rooms-tab.less';
 @import '../components/markdown.less';
 @import '../components/login-form.less';
+@import '../components/search-bar.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
