--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -5,20 +5,17 @@
   max-width: 600px;
 }
 
-.SearchPage-searchSelectContainer {
+.SearchPage-searchFilter {
+  display: block;
   width: 50%;
-  margin: 0 0 0 auto;
+  margin: 25px 0 25px auto;
 }
 
-.SearchPage-placeholderContainer {
+.SearchPage-placeholder {
   display: flex;
   justify-content: space-between;
 }
 
-.SearchPage-placeholderContainerIcon {
+.SearchPage-placeholderIcon {
     align-self: center
-}
-
-.SearchPage-searchTableLanguageColumn {
-  min-width: 150px;
 }
