--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -23,3 +23,34 @@
 .Room-newLessonButton {
   margin-top: 15px;
 }
+
+.Room-card {
+  &:first-of-type {
+    margin-top: 0;
+  }
+
+  margin-top: 40px;
+
+  &.Room-card--danger {
+    border-color: @red-7;
+  }
+}
+
+.Room-cardEditButton {
+  margin-top: 20px;
+}
+
+.Room-cardDangerAction {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Room-cardDangerActionTitle {
+  display: block;
+  font-weight: bold;
+}
+
+.Room-cardDangerActionDescription {
+  display: block;
+}
