Extract LESS variable

--- a/src/components/cookie-consent-drawer.less
+++ b/src/components/cookie-consent-drawer.less
@@ -1,3 +1,5 @@
+@cookie-consent-drawer-padding: 15px 25px;
+
 .CookieConsentDrawer {
   display: none;
 
@@ -33,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px 25px;
+  padding: @cookie-consent-drawer-padding;
   font-size: 42px;
 }
 
@@ -42,7 +44,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px 25px;
+  padding: @cookie-consent-drawer-padding;
   font-weight: bold;
 }
 
@@ -51,5 +53,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px 25px;
+  padding: @cookie-consent-drawer-padding;
 }
