NOTICKET: Correct the default font family

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -1,4 +1,5 @@
-@global-font-family: 'Roboto', sans-serif;
+@global-font-family: sans-serif;
+
 //Headers
 @global-h1-font-size: 2em;
 @global-h2-font-size: 1.5em;
