EDU-277 Add room description input

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -63,6 +63,7 @@
 @import '../components/markdown.less';
 @import '../components/login-form.less';
 @import '../components/search-bar.less';
+@import '../components/markdown-textarea.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
