NOTICKET: Make educandu teal

--- a/test-app/main.less
+++ b/test-app/main.less
@@ -2,8 +2,13 @@
 
 @import (css) url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-@educandu-blue: #002f65;
+@educandu-primary-color: #0d6868;
 
 // Example overrides
-@global-primary-color: @educandu-blue;
-@global-heading-color: @educandu-blue;
+@global-primary-color: @educandu-primary-color;
+@global-heading-color: @educandu-primary-color;
+@success-color: #369911;
+@info-color: lighten(@educandu-primary-color, 12%);
+@warning-color: #fa8c16;
+@error-color: #b11200;
+@processing-color: @green-9;
