--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -11,6 +11,10 @@
   justify-content: space-between;
 }
 
+.Room-description {
+  margin-bottom: 40px;
+}
+
 .Room-lessonInfo {
   display: flex;
   padding: 10px 0;
