--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -1,9 +1,9 @@
 .DefaultSiteLogo {
-  color: @global-primary-color;
+  color: @edu-primary-color;
 
   &:link, &:visited, &:active, &:hover {
     text-decoration: none;
-    color: @global-primary-color;
+    color: @edu-primary-color;
   }
 }
 
