--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -5,7 +5,7 @@
   min-height: 100vh;
   position: relative;
   flex-direction: column;
-  min-width: @global-min-page-width;
+  min-width: @edu-min-page-width;
   max-width: 100vw;
 }
 
@@ -16,7 +16,7 @@
   z-index: 1000;
   position: sticky;
   background-color: @grey-1;
-  margin-bottom: @global-content-padding;
+  margin-bottom: @edu-content-padding;
 }
 
 .ErrorPage-header {
@@ -26,7 +26,7 @@
 
 .ErrorPage-headerContent {
   display: block;
-  padding: @global-content-padding;
+  padding: @edu-content-padding;
 
   &.ErrorPage-headerContent--left {
     flex: 1 0 0%;
@@ -54,8 +54,8 @@
 .ErrorPage-contentContainer {
   margin: 0 auto;
   width: 100%;
-  min-width: @global-min-page-width;
-  max-width: @global-content-width-narrow;
+  min-width: @edu-min-page-width;
+  max-width: @edu-content-width-narrow;
 }
 
 .ErrorPage-content {
@@ -69,7 +69,7 @@
   font-family: 'Dancing Script';
   font-size: 72px;
   text-align: center;
-  color: @global-primary-color;
+  color: @edu-primary-color;
   margin: 32px 0;
 }
 
@@ -93,7 +93,7 @@
   z-index: 1000;
   align-items: center;
   justify-content: center;
-  padding: @global-content-padding;
+  padding: @edu-content-padding;
 }
 
 .ErrorPage-footerLink {
