--- a/src/components/pages/edit-doc.less
+++ b/src/components/pages/edit-doc.less
@@ -2,10 +2,10 @@
 
 .EditDocPage-docEditor {
   .m-content;
-  margin-bottom: @global-content-padding;
+  margin-bottom: @edu-content-padding;
 }
 
 .EditDocPage-addSectionButton {
   .m-content;
-  margin-top: @global-content-padding;
+  margin-top: @edu-content-padding;
 }
