--- a/src/components/pages/import-batch-view.less
+++ b/src/components/pages/import-batch-view.less
@@ -7,14 +7,14 @@
 }
 
 .ImportBatchViewPage-warningIcon {
-  color: @global-warning-color
+  color: @edu-warning-color
 }
 
 .ImportBatchViewPage-failedIcon {
-  color: @global-error-color;
+  color: @edu-error-color;
 }
 
 .ImportBatchViewPage-doneIcon {
-  color: @global-success-color;
+  color: @edu-success-color;
 }
 
