--- a/src/components/pages/room-membership-confirmation.less
+++ b/src/components/pages/room-membership-confirmation.less
@@ -12,6 +12,6 @@
 }
 
 .RoomMembershipConfirmationPage-disclaimer {
-  color: @global-error-color;
+  color: @edu-error-color;
   font-weight: bold;
 }
