--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,5 +1,5 @@
 .m-content {
-  padding: @global-content-padding;
+  padding: @edu-content-padding;
 }
 
 .m-fullscreen {
@@ -13,14 +13,14 @@
 
 .m-icon-button {
   &.ant-btn > span:not([role="img"]) {
-    @media @phone {
+    @media @edu-media-phone {
       display: none;
     }
   }
 }
 
 .m-grouped-button {
-  margin-right: @global-button-spacing;
+  margin-right: @edu-button-spacing;
 
   &:last-child {
     margin-right: 0;
