--- a/src/styles/section.less
+++ b/src/styles/section.less
@@ -9,11 +9,11 @@
 .Section {
   border: none;
   position: relative;
-  padding: @global-content-padding;
+  padding: @edu-content-padding;
   min-height: @section-min-height;
 
   &.is-active {
-    padding: @global-content-padding - @active-section-border-width;
+    padding: @edu-content-padding - @active-section-border-width;
     border: @active-section-border-width dashed @active-section-border-color;
   }
 }
