--- a/test-app/main.less
+++ b/test-app/main.less
@@ -2,13 +2,13 @@
 
 @import (css) url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-@educandu-primary-color: #0d6868;
+@testapp-primary-color: #0d6868;
 
-// Example overrides
-@global-primary-color: @educandu-primary-color;
-@global-heading-color: @educandu-primary-color;
-@success-color: #369911;
-@info-color: lighten(@educandu-primary-color, 12%);
-@warning-color: #fa8c16;
-@error-color: #b11200;
-@processing-color: @green-9;
+// Overrides
+@edu-font-family: 'Lato', sans-serif;
+@edu-primary-color: @testapp-primary-color;
+@edu-success-color: #369911;
+@edu-info-color: lighten(@testapp-primary-color, 12%);
+@edu-warning-color: #fa8c16;
+@edu-error-color: #b11200;
+@edu-processing-color: @green-9;
