--- a/src/components/cookie-consent-drawer.less
+++ b/src/components/cookie-consent-drawer.less
@@ -19,8 +19,9 @@
 }
 
 .CookieConsentDrawer-drawer {
-  background: fade(@global-warning-color, 85%);
+  background: fade(@edu-warning-color, 85%);
   display: flex;
+  flex-direction: row;
   align-items: stretch;
   justify-content: space-between;
   position: fixed;
@@ -28,6 +29,12 @@
   bottom: 0;
   width: 100%;
   z-index: 1001;
+
+  @media @edu-media-phone {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .CookieConsentDrawer-icon {
@@ -37,6 +44,10 @@
   justify-content: center;
   padding: @cookie-consent-drawer-padding;
   font-size: 42px;
+
+  @media @edu-media-phone {
+    display: none;
+  }
 }
 
 .CookieConsentDrawer-consentText {
@@ -46,6 +57,11 @@
   justify-content: center;
   padding: @cookie-consent-drawer-padding;
   font-weight: bold;
+
+  @media @edu-media-phone {
+    text-align: center;
+    padding-bottom: 0;
+  }
 }
 
 .CookieConsentDrawer-acceptButton {
