--- a/src/components/markdown.less
+++ b/src/components/markdown.less
@@ -3,7 +3,7 @@
 @markdown-blockquote-shadow-color: @grey-6;
 @markdown-blockquote-quotations-color: @blue-3;
 @markdown-table-border-color: @grey-7;
-@markdown-table-cell-text-color: @global-text-color;
+@markdown-table-cell-text-color: @edu-text-color;
 @markdown-table-header-background-color: fade(@blue-2, 60%);
 
 .Markdown {
