--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -18,7 +18,7 @@
   overflow: hidden;
   color: @quick-tester-color;
 
-  @media @phone {
+  @media @edu-media-phone {
     .u-max-width-100;
   }
 }
