--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,26 +1,21 @@
-@import 'antd/dist/antd.less';   // import official less entry file
-@import './ant-overrides.less';                     // override variables here
-
+// Library imports
+@import 'antd/dist/antd.less';
+@import (less) 'abcjs/abcjs-midi.css';
 @import 'flag-icon-css/less/flag-icon.less';
+@import (less) 'react-piano/dist/styles.css';
+
+// Setting the path prefix for the flag-icon library:
 @flag-icon-css-path: '/images/flags';
 
-@import (less) 'react-piano/dist/styles.css';
-@import (less) 'abcjs/abcjs-midi.css';
-
-// See also: https://ant.design/docs/spec/colors
-
-// Ant 4.16.13 sets this to flex making icons appear at the top of the button,
-// setting it back to inline-block like in earlier ant versions fixes the problem.
-// The following hack has to stay here until this issue is fixed and published:
-// https://github.com/ant-design/ant-design/issues/32365
-&.ant-btn-icon-only > .anticon {
-  display: inline-block;
-}
-
+// Shared educandu styles and variables
+@import './global-variables.less';
+@import './antd-overrides.less';
 @import './fontawesome.less';
-@import './variables.less';
 @import './utilities.less';
+@import './elements.less';
 @import './mixins.less';
+@import './greys.less';
+@import './hacks.less';
 
 // React components
 @import '../components/default-page-template.less';
@@ -82,18 +77,3 @@
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/ear-training/ear-training.less';
 @import '../plugins/diagram-net/diagram-net.less';
-
-// Global variables styles
-@import './global-variables.less';
-
-body {
-  font-family: @global-font-family;
-}
-
-h1 {
-  font-size: @global-h1-font-size;
-}
-
-h2 {
-  font-size: @global-h2-font-size;
-}
