--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -14,11 +14,11 @@
   transition: border-color 0.5s ease-in-out;
 
   &.is-highlighted {
-    border-color: @global-primary-color;
+    border-color: @edu-primary-color;
   }
 
   &.is-invalid {
-    border-color: @global-error-color;
+    border-color: @edu-error-color;
   }
 
   &.is-proposed {
