EDU-270 Add room subtitle, hide members tabs for public rooms

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -2,6 +2,20 @@
   .m-content;
 }
 
+.Room-title {
+  margin-bottom: 5px;
+}
+
+.Room-subtitle {
+  display: flex;
+  font-size: 13px;
+  padding-left: 20px;
+}
+
+.Room-subtitleIcon {
+  padding-right: 8px;
+}
+
 .Room-description {
   margin-bottom: 40px;
 }
@@ -38,8 +52,8 @@
 
 .Room-cardButton {
   display: block;
-  margin-left: auto;
-  margin-right: 20px;
+  margin-left: 20px;
+  margin-right: auto;
 }
 
 .Room-cardDangerAction {
