--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -1,3 +1,5 @@
+@room-date-label-width: 150px;
+
 .Room {
   .m-content;
 }
@@ -17,16 +19,37 @@
 }
 
 .Room-description {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 
 .Room-lessonInfo {
   display: flex;
-  padding: 10px 0;
+  flex-wrap: wrap;
+  padding: 10px;
+
+  &.isHighlighted {
+    border: 1px solid fade(@edu-primary-color, 10%);
+    background-color: fade(@edu-primary-color, 5%);
+    border-left: none;
+    border-right: none;
+  }
 }
 
-.Room-lessonWeek {
-  width: 150px;
+.Room-lessonStartsOn {
+  flex: 0 1 @room-date-label-width;
+}
+
+.Room-lessonTitle {
+  flex: 1 1 auto;
+  padding-left: 15px;
+}
+
+.Room-lessonTimeUntil {
+  flex: 0 1 auto;
+  font-size: 13px;
+  margin-left: auto;
+  margin-right: 0;
+  padding-left: 15px;
 }
 
 .Room-newLessonButton {
@@ -36,6 +59,11 @@
 .Room-membersRow {
   display: flex;
   justify-content: space-between;
+}
+
+.Room-membersRowDate {
+  display: block;
+  width: @room-date-label-width;
 }
 
 .Room-card {
