EDU-247 Introduce edit control panel

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -19,6 +19,12 @@
   }
 }
 
+.m-no-spinner-background {
+  &::before {
+    display: none !important;
+  }
+}
+
 .m-grouped-button {
   margin-right: @edu-button-spacing;
 
