--- a/src/components/pages/lesson.less
+++ b/src/components/pages/lesson.less
@@ -1,3 +1,13 @@
 .Lesson {
-  .m-content
+  .m-content;
+}
+
+.Lesson-editControlPanelItem {
+  display: inline-block;
+  vertical-align: bottom;
+  padding-right: 6px;
+
+  &:last-of-type {
+    padding-right: 0;
+  }
 }
