EDU-290 Create plugin selector dialog

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -34,6 +34,7 @@
 @edu-text-color: fade(@edu-black, 85%);
 @edu-text-color-secondary: fade(@edu-black, 45%);
 @edu-text-color-inverse: @edu-white;
+@edu-selection-background-color: fade(@edu-primary-color, 10%);
 
 // Border radii
 @edu-border-radius-base: 2px;
