--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -59,6 +59,7 @@
 @import '../components/login-form.less';
 @import '../components/search-bar.less';
 @import '../components/markdown-textarea.less';
+@import '../components/grid-selector.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
