--- a/src/components/ui-language-dialog.less
+++ b/src/components/ui-language-dialog.less
@@ -15,7 +15,7 @@
   height: auto;
 
   &.ant-radio-button-wrapper-checked {
-    background-color: fade(@edu-primary-color, 10%);
+    background-color: @edu-selection-background-color;
   }
 }
 
