NOTICKET: Streamline component state class name

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -27,7 +27,7 @@
   flex-wrap: wrap;
   padding: 10px;
 
-  &.isHighlighted {
+  &.is-highlighted {
     border: 1px solid fade(@edu-primary-color, 10%);
     background-color: fade(@edu-primary-color, 5%);
     border-left: none;
