EDU-290 UX improvements and style extraction

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -33,6 +33,10 @@
   }
 }
 
+.m-hide-browser-keyboard-focus {
+  outline: none !important; // Removes user agent black border when focused by keyboard
+}
+
 .m-selected-item {
   color: @edu-primary-color;
   border-color: @edu-primary-color;
