--- a/src/components/grid-selector.less
+++ b/src/components/grid-selector.less
@@ -23,10 +23,10 @@
   border-radius: @edu-border-radius-base;
   cursor: pointer;
   user-select: none;
-  outline: none !important; // Removes user agent black border when focused by keyboard
 
-  &.GridSelector-item--selected {
+  &.is-selected {
     .m-selected-item();
+    .m-hide-browser-keyboard-focus();
 
     &:focus, &:focus-within {
       .m-selected-item-focused();
