EDU-292 Create new section display component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -61,6 +61,7 @@
 @import '../components/markdown-textarea.less';
 @import '../components/grid-selector.less';
 @import '../components/edit-control-panel.less';
+@import '../components/section-display-new.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
