EDU-292 Implement lesson sections reordering and saving

--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -22,7 +22,14 @@
   display: flex;
   position: absolute;
   top: @section-display-new-action-button-margin;
-  right: @section-display-new-action-button-margin;
+
+  &.SectionDisplayNew-actions--left {
+    left: @section-display-new-action-button-margin;
+  }
+
+  &.SectionDisplayNew-actions--right {
+    right: @section-display-new-action-button-margin;
+  }
 }
 
 .SectionDisplayNew-actionButton{
