EDU-292 Style section dragging

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -1,4 +1,4 @@
-@control-panel-content-height: 24px;
+@control-panel-content-height: @edu-control-height-sm;
 @control-panel-padding: @edu-content-padding;
 @control-panel-height: @control-panel-content-height + (2 * @control-panel-padding);
 
