--- a/src/components/markdown-textarea.less
+++ b/src/components/markdown-textarea.less
@@ -13,5 +13,5 @@
   height: 100%;
   border: 1px solid @grey-5;
   padding: 4px 11px;
-  border-radius: @border-radius-base;
+  border-radius: @edu-border-radius-base;
 }
