--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -91,9 +91,9 @@
 // @margin-xss: 4px; // more small
 
 // // height rules
-// @height-base: 32px;
-// @height-lg: 40px;
-// @height-sm: 24px;
+@height-base: @edu-control-height-base;
+@height-lg: @edu-control-height-lg;
+@height-sm: @edu-control-height-sm;
 
 // // The background colors for active and hover states for things like
 // // list items or table cells.
