--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -3,6 +3,7 @@
 @section-display-new-action-button-margin: 2px;
 
 .SectionDisplayNew {
+  background-color: @edu-white;
   border: 1px dotted transparent;
   position: relative;
   padding: @edu-content-padding;
@@ -13,8 +14,14 @@
     padding-top: @section-display-new-editable-padding-top;
     border-color: @grey-7;
     min-height: @section-display-new-min-height + @section-display-new-editable-padding-top;
+  }
 
-    margin-bottom: 30px;
+  &.is-dragged {
+    border: 1px solid @grey-6;
+  }
+
+  &.is-other-section-dragged {
+    opacity: 0.60;
   }
 }
 
@@ -34,4 +41,16 @@
 
 .SectionDisplayNew-actionButton{
   margin-left: @section-display-new-action-button-margin;
+}
+
+.SectionDisplayNew-sectionInfo {
+  display: grid;
+  gap: 5px;
+  align-items: center;
+  grid-auto-flow: column;
+  padding: 0 5px;
+  height: @edu-control-height-sm;
+  border: 1px solid @grey-5;
+  border-radius: @edu-border-radius-base;
+  background-color: @edu-white;
 }
