--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -19,6 +19,9 @@
 @edu-content-width-wide: 1200px;
 @edu-content-width-narrow: 800px;
 @edu-button-spacing: 6px;
+@edu-control-height-base: 32px;
+@edu-control-height-lg: 40px;
+@edu-control-height-sm: 24px;
 
 // Colors
 @edu-primary-color: @blue-6;
