EDU-293 Add styling per action type

--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -43,8 +43,25 @@
   }
 }
 
-.SectionDisplayNew-actionButton{
+.SectionDisplayNew-actionButton {
   margin-left: @section-display-new-action-button-margin;
+
+  &.SectionDisplayNew-actionButton--edit,
+  &.SectionDisplayNew-actionButton--preview {
+    color: @green-8;
+    &:hover {
+      color: @green-8;
+      border-color: @green-8;
+    }
+  }
+
+  &.SectionDisplayNew-actionButton--delete {
+    color: @red-8;
+    &:hover {
+      color: @red-8;
+      border-color: @red-8;
+    }
+  }
 }
 
 .SectionDisplayNew-sectionInfo {
