--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -31,6 +31,7 @@
 
 .SectionDisplayNew-actions {
   display: flex;
+  line-height: 18px; // fixes misaligned button when disabled
   position: absolute;
   top: @section-display-new-action-button-margin;
 
