EDU-289 Make metadata optional on editControlPanel

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -22,11 +22,17 @@
   }
 }
 
-.EditControlPanel-children {
+.EditControlPanel-metadata {
   flex: 1 0 0%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.EditControlPanel-metadataEditButton {
+  display: inline-block;
+  vertical-align: bottom;
+  padding-right: 6px;
 }
 
 .EditControlPanel-buttonGroup {
@@ -70,3 +76,4 @@
     color: @edu-white;
   }
 }
+
