EDU-304 Rearrange lesson page content

--- a/src/components/pages/lesson.less
+++ b/src/components/pages/lesson.less
@@ -1,8 +1,8 @@
-.Lesson {
+.LessonPage {
   .m-content;
 }
 
-.Lesson-editControlPanelItem {
+.LessonPage-editControlPanelItem {
   display: inline-block;
   vertical-align: bottom;
   padding-right: 6px;
