EDU-306 Remove no longer used edit-doc page

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -1,12 +1,8 @@
-// Pure CSS class because it is used by
-// * src/components/pages/edit-doc.js
-// * src/components/section-display.js
-
 @section-min-height: 36px;
 @active-section-border-width: 1px;
 @active-section-border-color: @grey-7;
 
-.Section {
+.SectionDisplay {
   border: none;
   position: relative;
   padding: @edu-content-padding;
@@ -18,7 +14,7 @@
   }
 }
 
-.Section-actions {
+.SectionDisplay-actions {
   display: none;
   position: absolute;
   top: 4px;
