EDU-307 Add breadcrumbs to lesson page

--- a/src/components/pages/lesson.less
+++ b/src/components/pages/lesson.less
@@ -2,6 +2,10 @@
   .m-content;
 }
 
+.LessonPage-breadcrumbs {
+  padding: @edu-content-padding;
+}
+
 .LessonPage-editControlPanelItem {
   display: inline-block;
   vertical-align: bottom;
