--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -26,8 +26,10 @@
 // Colors
 @edu-primary-color: @blue-6;
 @edu-info-color: @edu-primary-color;
+@edu-apply-color: @green-4;
 @edu-success-color: @green-6;
 @edu-processing-color: @edu-primary-color;
+@edu-discard-color: @red-4;
 @edu-error-color: @red-5;
 @edu-highlight-color: @red-5;
 @edu-warning-color: @gold-6;
