--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -59,6 +59,7 @@
 @import '../components/search-bar.less';
 @import '../components/markdown-textarea.less';
 @import '../components/grid-selector.less';
+@import '../components/control-panel.less';
 @import '../components/edit-control-panel.less';
 @import '../components/section-display.less';
 @import '../components/section-display-new.less';
