EDU-312 Enable batch lesson creation

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -62,6 +62,7 @@
 @import '../components/edit-control-panel.less';
 @import '../components/section-display.less';
 @import '../components/section-display-new.less';
+@import '../components/lesson-metadata-modal.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
