--- a/src/components/cookie-consent-drawer.less
+++ b/src/components/cookie-consent-drawer.less
@@ -14,7 +14,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: @z-index-overlay-layer;
   background-color: rgba(0, 0, 0, 0.45);
 }
 
@@ -28,7 +28,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  z-index: 1001;
+  z-index: @z-index-sticky-content-layer;
 
   @media @edu-media-phone {
     flex-direction: column;
