--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -13,7 +13,7 @@
   top: 0;
   flex: none;
   width: 100%;
-  z-index: 1000;
+  z-index: @z-index-sticky-content-layer;
   position: sticky;
   background-color: @grey-1;
   margin-bottom: @edu-content-padding;
@@ -90,7 +90,7 @@
 .ErrorPage-footer {
   flex: none;
   display: flex;
-  z-index: 1000;
+  z-index: @z-index-cover-layer;
   align-items: center;
   justify-content: center;
   padding: @edu-content-padding;
