--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -13,6 +13,7 @@
 @import './fontawesome.less';
 @import './utilities.less';
 @import './elements.less';
+@import './z-index.less';
 @import './mixins.less';
 @import './greys.less';
 @import './hacks.less';
@@ -61,6 +62,7 @@
 @import '../components/grid-selector.less';
 @import '../components/control-panel.less';
 @import '../components/edit-control-panel.less';
+@import '../components/history-control-panel.less';
 @import '../components/section-display.less';
 @import '../components/section-display-new.less';
 @import '../components/lesson-metadata-modal.less';
