EDU-305 Fix problem with control panel not sticking to bottom when 2 are displayed

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   position: sticky;
+  top: %(~"calc(100% - %s)", @control-panel-height);
   bottom: 0;
   height: @control-panel-height;
   width: @control-panel-height;
@@ -16,11 +17,11 @@
   z-index: @z-index-overlay-layer;
 
   &.ControlPanel--position1 {
-    left: %(~"calc(100% - %s)", @control-panel-height * 3 + 2);
+    left: %(~"calc(100% - %s)", @control-panel-height * 2);
   }
 
   &.ControlPanel--position2 {
-    left: %(~"calc(100% - %s)", @control-panel-height * 2);
+    left: %(~"calc(100% - %s)", @control-panel-height * 3 + 2);
   }
 
   &.is-open {
