EDU-305 Introduce section hard deletion

--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -9,7 +9,8 @@
   padding: @edu-content-padding;
   min-height: @section-display-new-min-height;
 
-  &.is-editable {
+  &.is-editable,
+  &.is-hard-deletable {
     padding: @edu-content-padding;
     padding-top: @section-display-new-editable-padding-top;
     border-color: @grey-5;
