EDU-305 Invert slider colors (simulate ghost style) due to background

--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -829,14 +829,14 @@
 // // Slider
 // // ---
 // @slider-margin: 10px 6px 10px;
-// @slider-rail-background-color: @background-color-base;
-// @slider-rail-background-color-hover: #e1e1e1;
-// @slider-track-background-color: @primary-3;
-// @slider-track-background-color-hover: @primary-4;
+@slider-rail-background-color: @primary-4;
+@slider-rail-background-color-hover: @primary-3;
+@slider-track-background-color: @background-color-base;
+@slider-track-background-color-hover: #e1e1e1;
 // @slider-handle-border-width: 2px;
 // @slider-handle-background-color: @component-background;
-// @slider-handle-color: @primary-3;
-// @slider-handle-color-hover: @primary-4;
+@slider-handle-color: @primary-4;
+@slider-handle-color-hover: @primary-3;
 // @slider-handle-color-focus: tint(@primary-color, 20%);
 // @slider-handle-color-focus-shadow: fade(@primary-color, 12%);
 // @slider-handle-color-tooltip-open: @primary-color;
