EDU-305 Correct hard delete icon and style

--- a/src/components/section-display-new.less
+++ b/src/components/section-display-new.less
@@ -51,7 +51,7 @@
   &.SectionDisplayNew-actionButton--edit,
   &.SectionDisplayNew-actionButton--preview {
     color: @green-8;
-    &:hover {
+    &:hover, &:active, &:focus {
       color: @green-8;
       border-color: @green-8;
     }
@@ -59,7 +59,7 @@
 
   &.SectionDisplayNew-actionButton--delete {
     color: @red-8;
-    &:hover {
+    &:hover, &:active, &:focus {
       color: @red-8;
       border-color: @red-8;
     }
